--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "tmp": "^0.2.3"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kne-union/download-npm-package.git"
