--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ name: Publish Npm
 
 on:
   pull_request:
-    branches: [master]
+    branches: [ master ]
     types:
       - closed
 jobs:
@@ -18,7 +18,8 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-
+      - name: Create Document
+        run: npm run build:md
       - name: Publish Npm
         env:
           NODE_AUTH_TOKEN: ${{secrets.KNE_PACKAGE_PUBLISH}}
