--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/fetch-npm-package",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "下载并解压npm包文件",
   "main": "index.js",
   "files": [
@@ -11,7 +11,7 @@
     "decompress": "^4.2.1",
     "fs-extra": "^11.2.0",
     "lodash": "^4.17.21",
-    "request-promise": "^4.2.6",
+    "node-fetch": "^2.7.0",
     "tmp": "^0.2.3"
   },
   "devDependencies": {
